--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,21 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Set up Go
-        uses: actions/setup-go@v1
-        with:
-          go-version: 1.14
-
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Install goreleaser
         run: |
-          go install github.com/goreleaser/goreleaser
+          curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
 
       - name: Run release
         run: |
-          export PATH=$PATH:$(go env GOPATH)/bin
           goreleaser release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
