--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,16 +4,16 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        go: [1.14]
+        platform: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.platform }}
     steps:
 
     - name: Set up Go
       uses: actions/setup-go@v1
       with:
-        go-version: ${{ matrix.go }}
+        go-version: 1.14
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
