--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,17 +26,15 @@ jobs:
 
     - name: Run lint
       run: |
-        export PATH=$PATH:$(go env GOPATH)/bin
         go get -u golang.org/x/lint/golint
-        golint -set_exit_status
+        $(go env GOPATH)/bin/golint -set_exit_status
       env:
         GO111MODULE: on
 
     - name: Run golangci-lint
       run: |
-        export PATH=$PATH:$(go env GOPATH)/bin
         curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.23.8
-        golangci-lint run --disable errcheck
+        $(go env GOPATH)/bin/golangci-lint run --disable errcheck
       env:
         GO111MODULE: on
 
