--- a/.goreleaser-windows.yml
+++ b/.goreleaser-windows.yml
@@ -10,8 +10,7 @@ builds:
 - env:
   - CGO_ENABLED=0
   goos:
-  - darwin
-  - linux
+  - windows
 checksum:
   name_template: 'checksums.txt'
 snapshot:
