--- a/.github/workflows/release_windows.yml
+++ b/.github/workflows/release_windows.yml
@@ -24,6 +24,6 @@ jobs:
 
       - name: Run release
         run: |
-          goreleaser.exe release --rm-dist -f .goreleaser-windows.yml
+          C:\Users\runneradmin\scoop\shims\goreleaser.exe release --rm-dist -f .goreleaser-windows.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
