Rename checksum file in Windows

--- a/.goreleaser-windows.yml
+++ b/.goreleaser-windows.yml
@@ -12,7 +12,7 @@ builds:
   goos:
   - windows
 checksum:
-  name_template: 'checksums.txt'
+  name_template: 'checksums-windows.txt'
 snapshot:
   name_template: "{{ .Tag }}-next"
 changelog:
