--- a/.goreleaser-darwin.yml
+++ b/.goreleaser-darwin.yml
@@ -7,7 +7,7 @@ builds:
       - amd64
       - 386
 checksum:
-  name_template: 'checksums-linux.txt'
+  name_template: 'checksums-darwin.txt'
 snapshot:
   name_template: "{{ .Tag }}-next"
 changelog:
