--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,18 +1,27 @@
 name: Release
+on: [push]
 
-on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+# on:
+#   push:
+#     # Sequence of patterns matched against refs/tags
+#     tags:
+#       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
-  linux:
-    runs-on: ubuntu-latest
+  base:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.14
+
+  linux:
+    runs-on: ubuntu-latest
+    needs: [base]
+    steps:
       - name: Install goreleaser
         run: |
           sudo snap install --classic goreleaser
@@ -25,10 +34,8 @@ jobs:
 
   darwin:
     runs-on: macos-latest
+    needs: [base]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - name: Install goreleaser
         run: |
           brew install goreleaser/tap/goreleaser
@@ -42,6 +49,7 @@ jobs:
 
   windows:
     runs-on: windows-latest
+    needs: [base]
     steps:
       - name: Install goreleaser
         run: |
@@ -49,9 +57,6 @@ jobs:
           iwr -useb get.scoop.sh | iex
           scoop bucket add goreleaser https://github.com/goreleaser/scoop-bucket.git
           scoop install goreleaser
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v1
 
       - name: Run release
         run: |
